added admin only functionality

--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
     "message": {
         "help": "Hi, I'm Anime Alarm!\nI'm capable of bringing the latest anime episodes straight to your DMs for download and many more.\nHere's how to take advantage of my greatness:\n\n/watch - follow an anime for new episodes\n/unwatch - stop following an anime\n/latest - download the latest episode of any anime instantly\n/help - get help and learn about Anime Alarm\n/donate - donate to help this project",
+        "help_admin": "Hi, I'm Anime Alarm!\nI'm capable of bringing the latest anime episodes straight to your DMs for download and many more.\nHere's how to take advantage of my greatness:\n\n/watch - follow an anime for new episodes\n/unwatch - stop following an anime\n/latest - download the latest episode of any anime instantly\n/help - get help and learn about Anime Alarm\n/donate - donate to help this project\n/usercount - get number of users(ADMIN ONLY)\n/animecount - get number of anime(ADMIN ONLY)",
         "donate": [
             "You can donate in Bitcoin and Ethereum to help the development of this project.",
             "Bitcoin address:",
