--- a/python-app.conf
+++ b/python-app.conf
@@ -1,6 +1,6 @@
 [program:pythonapp]
 directory=/opt/app/
-command=/opt/app/env/bin/python /opt/app/main.py
+command=/opt/app/env/bin/python -m /opt/app/anime_alarm
 autostart=true
 autorestart=true
 user=pythonapp
